Grinder 3.0-beta8
-----------------

  Fix a bug in the TCPProxy which prevented the recording of 8-bit
  POST data. Thanks to Joakim Suarez for the report.

  The TCPProxy now copes with query strings and form data that are not
  name value pairs. Thanks to Ryan Balsam for the report.

  Tentative fix to bug 690639. (TCPProxy recorded HTTP script refers
  to header array before declaration.)


Grinder 3.0-beta7
-----------------

  Fix synchronisation of the console new tests event which was causing
  null pointer exceptions.

  Fix synchronisation of TestStatisticsMap that caused potential data
  loss and worker process stack traces.

  Fix handling of thread shutdown exceptions. Threads again now
  respond correctly to shutdown/reset requests.

  Improve console handling of large numbers of tests.


Grinder 3.0-beta6
-----------------

  Enhanced statistics API for scripts.

  Documentation.

  Source code clean up.


Grinder 3.0-beta5
-----------------

  Expose script and document API to allow scripts to work with custom
  statistics.

  Rationalise the plugin API so that PluginProcessContext and
  PluginThreadContext no longer extend Logger and FilenameFactory.

  Add JMS examples.

  Improve cleaning up of child processes when the agent is killed.

  Some script documentation.


Grinder 3.0-beta4
-----------------

  Correct implementation to read grinder.consolePort rather than
  grinder.console.consolePort. Thanks to Dave Tauzell for the report.

  Replace mandatory properties with reasonable defaults.

  Fix HTTPPlugin static initialisation order so that script settings
  are not overridden by default initialisation. Thanks to Mark Wilson
  and Brett Schmoll for reports.

  Script API to provide access to The Grinder build version -
  net.grinder.common.GrinderBuild.

  Script API to provide access to the HTTPClient connection context
  for a thread -
  net.grinder.plugin.http.HTTPPluginControl.getHTTPClientContext().
